# ouparams

./: LICENSE  README.md  setup.cfg
src/ouparams/: ouparams.py
src/ouparams.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
