[metadata]
name = ouparams
version = 0.0.1
author = "Mostafa Ghadamyari"
author_email = "m.ghadam@sharif.edu"
description = "A package to estimate process parameters for Ornstein-Uhlenbeck"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mghadam/ouparams
project_urls =
    Bug Tracker = https://github.com/mghadam/ouparams/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

